<?php

use App\Models\Zone;
use Illuminate\Support\Facades\Schema;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('zones', function (Blueprint $table) {
            $table->id();
            $table->string('name');
            $table->integer('price_per_hour');
            $table->timestamps();
        });

        // seed
        Zone::create(['name' => 'Green Zone', 'price_per_hour' => 1000]);
        Zone::create(['name' => 'Yellow Zone', 'price_per_hour' => 2000]);
        Zone::create(['name' => 'Red Zone', 'price_per_hour' => 3000]);
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('zones');
    }
};
